# oko

./: .gitignore  LICENSE  MANIFEST.in  README.md  oko.db  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test_workflow.yml
docs/: ARCHITECTURE.md  CONCEPTS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  RULES.md  SECURITY.md  SECURITY_AUDIT.md  USAGE.md  VISION.md
examples/: fastapi_example.py  fastapi_logging_example.py  flask_dashboard_example.py  flask_examples.py
oko/: __init__.py
oko/adapters/: asgi.py  base.py  logging_handler.py  wsgi.py
oko/api/: builder.py
oko/connectors/: base.py  telegram.py
oko/core/: __init__.py  event.py  worker.py
oko/dashboard/adapters/: fastapi.py
oko/dashboard/core/: repository.py  service.py
oko/dashboard/templates/: base.html  events.html
oko/pipeline/: deduplication.py  enrichment.py  processor.py  rate_limit.py
oko/storage/: sqlite.py
src/oko/: __init__.py
src/oko/adapters/: base.py  logging_handler.py
src/oko/api/: builder.py
src/oko/connectors/: telegram.py  webhook.py
tests/: __init__.py  conftest.py
tests/adapters/: __init__.py  test_asgi.py  test_wsgi.py
tests/connectors/: __init__.py  test_telegram.py  test_webhook.py
tests/core/: __init__.py  test_engine.py  test_event.py  test_queue.py  test_worker.py
tests/dashboard/: __init__.py  test_flask.py  test_repository.py  test_schemas.py  test_service.py
tests/pipeline/: __init__.py  test_deduplication.py  test_enrichment.py  test_processor.py  test_rate_limit.py
tests/storage/: __init__.py  test_sqlite.py
(+10 files in other folders)
